--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,38 @@
-<ion-tabs>
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">This is the menu content.
+    <!-- para coomentarios
+    -->
+    <ion-item (click)="this.opcion = this.INICIO" [routerLink]="'tab1'" href="#">
+      <ion-label>Inicio</ion-label>
+    </ion-item>
+    <ion-item (click)="this.opcion = this.OPCION1" [routerLink]="'tab2'" href="#">
+      <ion-label>Opcion2</ion-label>
+    </ion-item>
+    <ion-item (click)="this.opcion = this.OPCION3" [routerLink]="'tab3'" href="#">
+      <ion-label>Opcion3</ion-label>
+    </ion-item>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
-    </ion-tab-button>
+      <app-tab1 *ngIf="this.opcion===this.INICIO"></app-tab1>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
+       <app-tab2 *ngIf="this.opcion===this.OPCION1"></app-tab2>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-
-</ion-tabs>
+      <app-tab3 *ngIf="this.opcion===this.OPCION3"></app-tab3>
+  </ion-content>
+</div>
